--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue": "^2.4.1",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
+    "vue-gallery": "^2.0.1",
     "vue-router": "^3.1.5",
     "vue-slick-carousel": "^1.0.2",
     "vuex": "^3.1.2"
